Add redis-cli to initialize the cluster

--- a/frameworks/redis-cluster/universe/marathon.json.mustache
+++ b/frameworks/redis-cluster/universe/marathon.json.mustache
@@ -49,6 +49,7 @@
     "REDIS_PORT": "{{redis.port}}",
     "CLUSTER_NODE_TIMEOUT": "{{redis.cluster_node_timeout}}",
 
+    "REDIS_CLI_IMAGE": "{{resource.assets.container.docker.redis-cli}}",
 
     "JAVA_URI": "{{resource.assets.uris.jre-tar-gz}}",
     "EXECUTOR_URI": "{{resource.assets.uris.executor-zip}}",
