Add parameters for starting redis

--- a/frameworks/redis-cluster/universe/marathon.json.mustache
+++ b/frameworks/redis-cluster/universe/marathon.json.mustache
@@ -53,7 +53,8 @@
     "RDB900": "{{redis.save900}}",
     "RDB300": "{{redis.save300}}",
     "RDB60": "{{redis.save60}}",
-    "TCP_KEEPALIVE":"{{redis.tcp_keepalive}}"
+    "TCP_KEEPALIVE":"{{redis.tcp_keepalive}}",
+    "REDIS_TIMEOUT":"{{redis.redis_timeout}}",
     "CLUSTER_NODE_TIMEOUT": "{{redis.cluster_node_timeout}}",
 
     "REDIS_CLI_IMAGE": "{{resource.assets.container.docker.redis-cli}}",
